@@ -38,6 +38,8 @@ next version - not yet released
  FIXED  : Ticket #1178, Fix OSD messages when toggling "Screen Space Pixel Shader" on/off
  FIXED  : Ticket #1212, Playing "Recent File" clears playlist, even though playlist contains file
  FIXED  : Ticket #1220, MPC fails to play specific MKV files
+ FIXED  : Ticket #1251, If the window is maximized, it will stay maximized when removing the caption
+          or the menus. The video frame will be extended rather than reducing the size of the window.
  FIXED  : Ticket #1321, IMpegSplitterFilter uses CString - should be WCHAR or BSTR instead
  FIXED  : Ticket #1383, Fix OSD positioning: messages displayed at the top-right of the window
           before going fullscreen were incorrectly positioned after switching to fullscreen
